--- a/templates/login.phpbb3.tmpl
+++ b/templates/login.phpbb3.tmpl
@@ -1,6 +1,6 @@
 %{ This is a default template }%%TMPL:INCLUDE{"login"}%
 
-%TMPL:DEF{"title"}%<img src="%PUBURL%/%SYSTEMWEB%/JoomlaUsersContrib/JoomlaIcon.png" style="float:right; border:20px;"/>
----++ %MAKETEXT{"Please enter your Joomla username and password"}%
+%TMPL:DEF{"title"}%<img src="%PUBURL%/%SYSTEMWEB%/PhpBB3UsersContrib/PhpBB3Icon.png" style="float:right; border:20px;"/>
+---++ %MAKETEXT{"Please enter your phpBB3 username and password"}%
 %TMPL:END%
 
